tests/ui/lang-items/required-lang-item.stderr
error: requires `ResumeTy` lang_item
  --> $DIR/required-lang-item.rs:10:14
   |
LL | async fn x() {}
   |              ^^

error: aborting due to 1 previous error

